<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ImageView android:layout_width="wrap_content" android:layout_height="96dp"
               android:id="@+id/nong_lam"
                android:src="@drawable/anhtruongnonglam">

    </ImageView>

    <EditText android:layout_width="249dp"
              android:layout_height="wrap_content"
              android:id="@+id/name"
              android:layout_marginStart="28dp"
              android:layout_marginTop="20dp"
              android:text="@string/username" android:inputType="text">


    </EditText>
    <EditText android:layout_width="247dp" android:layout_height="wrap_content"
              android:id="@+id/phone"
              android:layout_marginStart="28dp"
              android:layout_marginTop="50dp"
              android:text="@string/phone" android:inputType="phone">

    </EditText>
    <EditText android:layout_width="246dp" android:layout_height="wrap_content"
              android:id="@+id/email"
              android:layout_marginTop="50dp"
              android:layout_marginStart="28dp"
              android:text="@string/email"
              android:inputType="textEmailAddress">

    </EditText>
    <EditText android:layout_width="250dp" android:layout_height="wrap_content"
              android:id="@+id/address"
              android:layout_marginStart="28dp"
              android:layout_marginTop="75dp"
              android:text="@string/address"
              android:inputType="textPostalAddress">

    </EditText>
    <Button android:layout_width="156dp" android:layout_height="wrap_content"
            android:id="@+id/btn_date"
            android:layout_marginStart="28dp"
            android:layout_marginTop="75dp"
            android:text="@string/date"
            android:background="@color/black">

    </Button>
    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="200dp"
    >
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/male"
                     android:text="@string/male"
        >

        </RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/female"
                     android:text="@string/female"
                     android:layout_marginLeft="80dp"
                     android:layout_marginTop="-50dp">

        </RadioButton>

    </RadioGroup>
    <EditText android:layout_width="299dp" android:layout_height="wrap_content"
              android:layout_marginTop="50dp"
              android:layout_marginLeft="20dp"
              android:id="@+id/group"
              android:text="@string/group">

    </EditText>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/Android"
              android:text="@string/android"
    >

    </CheckBox>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/Web"
              android:text="@string/web">

    </CheckBox>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/IC3"
              android:text="@string/IC3">

    </CheckBox>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:layout_marginLeft="150dp"
            android:text="@string/ok">

    </Button>
</LinearLayout>

